alignment issues still D:

--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -29,7 +29,7 @@ html {
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: calc(100vh - 16px);
+    height: 100vh;
     #menu {
       display: grid;
       grid-template-columns: $menu-width/2 $menu-width/2;
